Update project name and description; add Python version file and VSCode launch configuration.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "test-mcp"
+name = "ebanking-agent"
 version = "0.1.0"
-description = "Test MCP with Mock Banking API"
+description = "Demo Banking Agent with MCP"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
